@@ -412,6 +412,8 @@ itrunc(struct inode *ip)
   struct buf *bp;
   uint *a;
 
+  //BEGIN PROJECT 4 CHANGES
+  //zero out the addrs array and returns
  if(ip->type == T_SMALLFILE)
   {
     for(i = 0; i <= NDIRECT; i++){
@@ -423,7 +425,7 @@ itrunc(struct inode *ip)
     iupdate(ip);
     return;
   }
-
+//END PROJECT 4 CHANGES
 
 
   for(i = 0; i < NDIRECT; i++){
@@ -469,12 +471,6 @@ readi(struct inode *ip, char *dst, uint off, uint n)
 {
   uint tot, m;
   struct buf *bp;
-  //small file
-  if(ip->type == T_SMALLFILE){
-	cprintf("\nOffset = %d, number of bytes = %d, and ip->size is %d\n", off, n, ip->size);
-	}  
-
-
 
   if(ip->type == T_DEV){
     if(ip->major < 0 || ip->major >= NDEV || !devsw[ip->major].read)
@@ -488,7 +484,7 @@ readi(struct inode *ip, char *dst, uint off, uint n)
 
   if(off + n > ip->size)
     n = ip->size - off;
-
+//BEGIN PROJECT 4 CHANGES
 //small file
 //the inode has slots for block addresses: NDIRECT for 12 direct pointers and
 // 1 for INDIRECT pointer. Thus we can store  (NDIRECT+1)*4
@@ -496,21 +492,16 @@ readi(struct inode *ip, char *dst, uint off, uint n)
 //if the file is less than (NDIRECT+1)*4 we will store it in inode
 
 if (ip->type ==T_SMALLFILE){
-	//cprintf("Its a smallfile. File size : %d\n", ip->size);
-	//cprintf("\nOffset = %d, number of bytes = %d\n", off, n);
-	//truncating if n>53 bytes
-	//cprintf("NDIRECT : %d\n", NDIRECT);
+	//truncating if n + off > 52 bytes
 	if(off + n > ((NDIRECT + 1) * 4))
    	 {
       		n = ((NDIRECT + 1) * 4) - off;
    	 }
-	//cprintf("Final n : %d\n", n);
 
 	memmove(dst, (void*)((uint)ip->addrs+off), n);
-    	//cprintf("Character read : %c\n", dst);
 	return n;
-	
 }
+//END PROJECT 4 CHANGES
 for(tot=0; tot<n; tot+=m, off+=m, dst+=m){
     uint sector_number = bmap(ip, off/BSIZE);
     if(sector_number == 0){ //failed to find block
@@ -549,29 +540,21 @@ writei(struct inode *ip, char *src, uint off, uint n)
 
 
 //cprintf("\nMAXFILE is %d, and BSIZE is %d", MAXFILE,BSIZE);
+//BEGIN PROJECT 4 CHANGES
 //small file
-
 if(ip->type == T_SMALLFILE){
+  //if the write will fit in the NDIRECT array, add it there
   if(off + n <= ((NDIRECT + 1) * 4)){
-      //cprintf("\nWriting to a small file\n");
-      //cprintf("\nOffset = %d, number of bytes = %d\n", off, n);
-      //Truncating number of bytes to 52 if n exceeds the space of 53 bytes
-      /*if(off + n > ((NDIRECT + 1) * 4))
-      {
-        n = ((NDIRECT + 1) * 4) - off;
-      }*/
       memmove((void*) ((uint)ip->addrs + off), src, n);
-      //cprintf("Character written : %c\n", src);   
-
-
+      
       if(n > 0){
         ip->size = n+off;
       }
+      
       iupdate(ip);
-      //cprintf("\nFile size : %d\n", ip->size);
       return n;
   } else{
-      //code for turning small file to regular file
+      //code for turning small file to regular file if the write is too large
       ip->type = T_FILE;
       int size = ip->size;
       char buf[((NDIRECT + 1) * 4)];
@@ -581,7 +564,7 @@ if(ip->type == T_SMALLFILE){
       writei(ip, buf, off, size);
     }
   }
-
+//END PROJECT 4 CHANGES
 
 	
 
